# life-differential

./: Cargo.toml  README.md
examples/: faster-fizzbuzz.rs  fizzbuzz.rs  intersection.rs
src/: main.rs
